Insanely ease vulkan shader pipeline setup

--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -258,14 +258,19 @@
 \input{struct_instanced_renderer}
 \input{struct_mesh_asset}
 \input{class_pipeline_builder}
+\input{struct_pipeline_description}
 \input{struct_descriptor_allocator_1_1_pool_size_ratio}
 \input{struct_quad_instance}
 \input{struct_vertex}
 \input{struct_vertex_input_description}
+\input{struct_vertex_input_entry}
 \input{struct_vulkan_buffer}
 \input{struct_vulkan_context}
+\input{struct_vulkan_descriptor_set_entry}
+\input{struct_vulkan_descriptor_set_entry_binding}
 \input{class_vulkan_engine}
 \input{struct_vulkan_pipeline}
+\input{struct_vulkan_push_constant_entry}
 \input{struct_vulkan_swapchain}
 \chapter{File Documentation}
 \input{camera_8cpp}
