--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -15,13 +15,18 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{struct_instanced_renderer}{Instanced\+Renderer}} }{\pageref{struct_instanced_renderer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_mesh_asset}{Mesh\+Asset}} }{\pageref{struct_mesh_asset}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_pipeline_builder}{Pipeline\+Builder}} }{\pageref{class_pipeline_builder}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_pipeline_description}{Pipeline\+Description}} }{\pageref{struct_pipeline_description}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_descriptor_allocator_1_1_pool_size_ratio}{Descriptor\+Allocator\+::\+Pool\+Size\+Ratio}} }{\pageref{struct_descriptor_allocator_1_1_pool_size_ratio}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_quad_instance}{Quad\+Instance}} }{\pageref{struct_quad_instance}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_vertex}{Vertex}} }{\pageref{struct_vertex}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_vertex_input_description}{Vertex\+Input\+Description}} }{\pageref{struct_vertex_input_description}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_vertex_input_entry}{Vertex\+Input\+Entry}} }{\pageref{struct_vertex_input_entry}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_buffer}{Vulkan\+Buffer}} }{\pageref{struct_vulkan_buffer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_context}{Vulkan\+Context}} }{\pageref{struct_vulkan_context}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_descriptor_set_entry}{Vulkan\+Descriptor\+Set\+Entry}} }{\pageref{struct_vulkan_descriptor_set_entry}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_descriptor_set_entry_binding}{Vulkan\+Descriptor\+Set\+Entry\+Binding}} }{\pageref{struct_vulkan_descriptor_set_entry_binding}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_vulkan_engine}{Vulkan\+Engine}} }{\pageref{class_vulkan_engine}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_pipeline}{Vulkan\+Pipeline}} }{\pageref{struct_vulkan_pipeline}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_push_constant_entry}{Vulkan\+Push\+Constant\+Entry}} }{\pageref{struct_vulkan_push_constant_entry}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_vulkan_swapchain}{Vulkan\+Swapchain}} }{\pageref{struct_vulkan_swapchain}}{}
 \end{DoxyCompactList}
